Eureka server added, userManager microservice added without businessLogic

--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,7 @@
 
 	<modules>
 		<module>microservizio1</module>
+		<module>userManager</module>
+		<module>eureka-server</module>
 	</modules>
 </project>
