--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
 	</build>
 
 	<modules>
-		<module>microservizio1</module>
 		<module>userManager</module>
 		<module>eureka-server</module>
 		<module>productManager</module>
+		<module>cartManager</module>
 	</modules>
 </project>
