--- a/productManager/src/main/resources/application.properties
+++ b/productManager/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 ####################################
 
 # Per convenzione non usiamo la porta 8080 (usata dai browser)
-server.port = 8083
+server.port = 8084
 
 # Definisco un nome per questo micro-servizio
 spring.application.name = productmanager-service
@@ -14,9 +14,15 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 # URL di connessione al DB per JDBC:
 spring.datasource.url=jdbc:mysql://localhost:3306/myamazon
 
+# Abilita le azioni ddl
+spring.jpa.generate-ddl = true
+
+# Abilita azioni ddl controllate da Hibernate - maggior granularita'
+spring.jpa.hibernate.ddl-auto=update
+
 # Driver e credenziali per la connessione al DB MySql
 spring.datasource.username=root
-spring.datasource.password=Password01!
+spring.datasource.password=asdrubale
 
 # Formattazione e colorazione dei log
 spring.output.ansi.enabled=ALWAYS
