Project done, no-docker
API's do work in a non-containerized environment

--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,6 @@
 		<module>productManager</module>
 		<module>cartManager</module>
 		<module>historyManager</module>
+		<module>gateway</module>
 	</modules>
 </project>
