Project done - dockerized

--- a/cartManager/src/main/resources/application.properties
+++ b/cartManager/src/main/resources/application.properties
@@ -4,26 +4,28 @@
 
 
 # URL di connessione al DB per JDBC:
-spring.datasource.url=jdbc:mysql://localhost:3306/myamazon
+spring.datasource.url=jdbc:mysql://mysql-db-myamazon-container:3306/myamazon
 
-# Driver e credenziali per la connessione al DB MySql
-spring.datasource.username=root
-spring.datasource.password=asdrubale
+#Iscrizione al server eureka indicato dall'ur
+eureka.client.service-url.defaultZone=http://eureka-container:8761/eureka
 
 #Variabili d'ambiente
-history-manager.url=${HISTORY_MANAGER_URL}
+historymanager.url=${HISTORY_MANAGER_URL}
+
+#Driver e credenziali per la connessione al DB MySql
+spring.datasource.username=root
 
 #Porta univoca per questo microservizio:
 server.port=8084
 
-
-
 #La convenzione per il nome di questo micro-servizio visto che e'un paziente e'la seguente
 spring.application.name=cartmanager-service
 
-#Iscrizione al server eureka indicato dall'ur
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# Abilita le azioni ddl
+spring.jpa.generate-ddl = true
 
+# Abilita azioni ddl controllate da Hibernate - maggior granularita'
+spring.jpa.hibernate.ddl-auto=update
 
 
 
