--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -1,7 +1,10 @@
+
+			#Eureka-server
+
 FROM openjdk:17-alpine
 
-COPY ./target/eureka-server-dmbs-0.0.1-SNAPSHOT.jar .
+COPY ./target/eureka-server-0.0.1-SNAPSHOT.jar .
 
 EXPOSE 8761
 
-CMD java -jar eureka-server-dmbs-0.0.1-SNAPSHOT.jar
+CMD java -jar eureka-server-0.0.1-SNAPSHOT.jar
