--- a/historyManager/src/main/resources/application.properties
+++ b/historyManager/src/main/resources/application.properties
@@ -4,8 +4,10 @@ server.port = 8085
 # Definisco un nome per questo micro-servizio
 spring.application.name = historymanager-service
 
-# Iscrivo questo micro-servizio all'Eureka Server indicato dall'url
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#Iscrizione al server eureka indicato dall'ur
+eureka.client.service-url.defaultZone=http://eureka-container:8761/eureka
+
 
 # Parametri di connessione al DB per MongoDB Compass:
 spring.data.mongodb.host=localhost
