--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,54 +8,77 @@ services:
   - 8761:8761
   
  gateway:
-  build: /gateway-dbms/
-  image: gateway-dbms-image:0.0.1
-  container_name: gateway-dbms-container
+  build: /gateway/
+  image: gateway-image:0.0.1
+  container_name: gateway-container
   ports:
   - 8081:8081
   
  mysql-db:
   image: mysql:latest
-  container_name: mysql-db-container
+  container_name: mysql-db-myamazon-container
   environment:
-   MYSQL_DATABASE: ultimo
+   MYSQL_DATABASE: myamazon
    MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
   ports:
-  - 3309:3306
+  - 3310:3306
   volumes:
   - mysqldb_data:/var/lib/mysql
   
  mongo-db:
     image: mongo:latest
-    container_name: mongo-db-container
+    container_name: mongo-db-myamazon-container
     environment:
-      MONGO_INITDB_DATABASE: ultimo
+      MONGO_INITDB_DATABASE: history
     ports:
-      - "27018:27017"
+      - "27019:27017"
     volumes:
       - mongodb_data:/data/db
       
- sql-cruder-service:
-  build: /sql-cruder/
-  image: sql-cruder-image:0.0.1
-  container_name: sql-cruder-container
+ cart-manager-service:
+  build: /cartManager/
+  image: cart-manager-image:0.0.1
+  container_name: cart-manager-container
+  ports:
+  - 8084:8084
+  depends_on:
+  - eureka-server
+  - mysql-db
+  restart: on-failure   
+     
+ history-manager-service:
+  build: /historyManager/
+  image: history-manager-image:0.0.1
+  container_name: history-manager-container
+  ports:
+  - 8085:8085
+  depends_on:
+  - eureka-server
+  - mongo-db
+  restart: on-failure  
+    
+ product-manager-service:
+  build: /productManager/
+  image: product-manager-image:0.0.1
+  container_name: product-manager-container
+  ports:
+  - 8083:8083
+  depends_on:
+  - eureka-server
+  - mysql-db
+  restart: on-failure   
+    
+ user-manager-service:
+  build: /userManager/
+  image: user-manager-image:0.0.1
+  container_name: user-manager-container
   ports:
   - 8082:8082
   depends_on:
   - eureka-server
   - mysql-db
   restart: on-failure   
-     
- nosql-cruder-service:
-  build: /nosql-cruder/
-  image: nosql-cruder-image:0.0.1
-  container_name: nosql-cruder-container
-  ports:
-  - 8083:8083
-  depends_on:
-  - eureka-server
-  - mongo-db
-  restart: on-failure
+    
   
   
   
