--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -8,19 +8,19 @@ spring:
     gateway:
       routes:
         - id: usermanager-service
-          uri: 'http://localhost:8082'
+          uri: 'http://user-manager-container:8082'
           predicates:
             - Path=/userManager/**
         - id: productmanager-service
-          uri: 'http://localhost:8083'
+          uri: 'http://product-manager-container:8083'
           predicates:
             - Path=/productManager/**
         - id: cartmanager-service
-          uri: 'http://localhost:8084'
+          uri: 'http://cart-manager-container:8084'
           predicates:
             - Path=/cartManager/**
         - id: historymanager-service
-          uri: 'http://localhost:8085'
+          uri: 'http://history-manager-container:8085'
           predicates:
             - Path=/historyManager/**
             
