--- a/productManager/src/main/resources/application.properties
+++ b/productManager/src/main/resources/application.properties
@@ -8,11 +8,12 @@ server.port = 8083
 # Definisco un nome per questo micro-servizio
 spring.application.name = productmanager-service
 
-# Iscrivo questo micro-servizio all'Eureka Server indicato dall'url
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
 # URL di connessione al DB per JDBC:
-spring.datasource.url=jdbc:mysql://localhost:3306/myamazon
+spring.datasource.url=jdbc:mysql://mysql-db-myamazon-container:3306/myamazon
+
+#Iscrizione al server eureka indicato dall'ur
+eureka.client.service-url.defaultZone=http://eureka-container:8761/eureka
+
 
 # Abilita le azioni ddl
 spring.jpa.generate-ddl = true
@@ -22,7 +23,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Driver e credenziali per la connessione al DB MySql
 spring.datasource.username=root
-spring.datasource.password=asdrubale
 
 # Formattazione e colorazione dei log
 spring.output.ansi.enabled=ALWAYS
