--- a/userManager/src/main/resources/application.properties
+++ b/userManager/src/main/resources/application.properties
@@ -4,12 +4,13 @@
 
 
 # URL di connessione al DB per JDBC:
-spring.datasource.url=jdbc:mysql://localhost:3306/myamazon
+spring.datasource.url=jdbc:mysql://mysql-db-myamazon-container:3306/myamazon
+
+#Iscrizione al server eureka indicato dall'ur
+eureka.client.service-url.defaultZone=http://eureka-container:8761/eureka
 
 # Driver e credenziali per la connessione al DB MySql
 spring.datasource.username=root
-spring.datasource.password=asdrubale
-
 
 #Porta univoca per questo microservizio:
 server.port=8082
@@ -17,9 +18,11 @@ server.port=8082
 #La convenzione per il nome di questo micro-servizio visto che e'un paziente e'la seguente
 spring.application.name=usermanager-service
 
-#Iscrizione al server eureka indicato dall'ur
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+# Abilita le azioni ddl
+spring.jpa.generate-ddl = true
 
+# Abilita azioni ddl controllate da Hibernate - maggior granularita'
+spring.jpa.hibernate.ddl-auto=update
 
 
 
