urls of mysqldb and eureka server are now global enviroment variables
now the urls of the mysqldb and eureka server are global enviromental variables in docker-compose

--- a/historyManager/src/main/resources/application.properties
+++ b/historyManager/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+
+				#HistoryManager
+
 # Per convenzione non usiamo la porta 8080 (usata dai browser)
 server.port = 8085
 
@@ -6,7 +9,8 @@ spring.application.name = historymanager-service
 
 
 #Iscrizione al server eureka indicato dall'ur
-eureka.client.service-url.defaultZone=http://eureka-container:8761/eureka
+#eureka.client.service-url.defaultZone=http://eureka-container:8761/eureka
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_URL}
 
 
 # Parametri di connessione al DB per MongoDB Compass:
