--- a/cartManager/src/main/resources/application.properties
+++ b/cartManager/src/main/resources/application.properties
@@ -4,10 +4,12 @@
 
 
 # URL di connessione al DB per JDBC:
-spring.datasource.url=jdbc:mysql://mysql-db-myamazon-container:3306/myamazon
+#spring.datasource.url=jdbc:mysql://mysql-db-myamazon-container:3306/myamazon
+spring.datasource.url=${MYSQL_DB_URL}
 
 #Iscrizione al server eureka indicato dall'ur
-eureka.client.service-url.defaultZone=http://eureka-container:8761/eureka
+#eureka.client.service-url.defaultZone=http://eureka-container:8761/eureka
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_URL}
 
 #Variabili d'ambiente
 historymanager.url=${HISTORY_MANAGER_URL}
