--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,9 @@
+
+  
+x-common-variables: &common-variables
+   MYSQL_DB_URL : jdbc:mysql://mysql-db-myamazon-container:3306/myamazon
+   EUREKA_CLIENT_URL : http://eureka-container:8761/eureka
+
 services:
 
  eureka-server:
@@ -44,7 +50,9 @@ services:
   depends_on:
   - eureka-server
   - mysql-db
-  restart: on-failure   
+  restart: on-failure
+  environment:
+       <<: *common-variables  
      
  history-manager-service:
   build: /historyManager/
@@ -55,7 +63,9 @@ services:
   depends_on:
   - eureka-server
   - mongo-db
-  restart: on-failure  
+  restart: on-failure
+  environment:
+       <<: *common-variables   
     
  product-manager-service:
   build: /productManager/
@@ -66,7 +76,9 @@ services:
   depends_on:
   - eureka-server
   - mysql-db
-  restart: on-failure   
+  restart: on-failure
+  environment:
+       <<: *common-variables    
     
  user-manager-service:
   build: /userManager/
@@ -77,13 +89,12 @@ services:
   depends_on:
   - eureka-server
   - mysql-db
-  restart: on-failure   
+  restart: on-failure
+  environment:
+       <<: *common-variables    
     
-  
-  
-  
-  
-  
+
+   
 volumes:
   mongodb_data:
   mysqldb_data:
