--- a/productManager/src/main/resources/application.properties
+++ b/productManager/src/main/resources/application.properties
@@ -9,11 +9,12 @@ server.port = 8083
 spring.application.name = productmanager-service
 
 # URL di connessione al DB per JDBC:
-spring.datasource.url=jdbc:mysql://mysql-db-myamazon-container:3306/myamazon
+#spring.datasource.url=jdbc:mysql://mysql-db-myamazon-container:3306/myamazon
+spring.datasource.url=${MYSQL_DB_URL}
 
 #Iscrizione al server eureka indicato dall'ur
-eureka.client.service-url.defaultZone=http://eureka-container:8761/eureka
-
+#eureka.client.service-url.defaultZone=http://eureka-container:8761/eureka
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_URL}
 
 # Abilita le azioni ddl
 spring.jpa.generate-ddl = true
