[FIX] Update database credentials and fix JSON references

--- a/cartManager/src/main/resources/application.properties
+++ b/cartManager/src/main/resources/application.properties
@@ -8,10 +8,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/myamazon
 
 # Driver e credenziali per la connessione al DB MySql
 spring.datasource.username=root
-spring.datasource.password=asdrubale
+spring.datasource.password=Password01!
 
-#Variabili d'ambiente
-history-manager.url=${HISTORY_MANAGER_URL}
 
 #Porta univoca per questo microservizio:
 server.port=8084
