--- a/productManager/src/main/resources/application.properties
+++ b/productManager/src/main/resources/application.properties
@@ -18,11 +18,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/myamazon
 spring.jpa.generate-ddl = true
 
 # Abilita azioni ddl controllate da Hibernate - maggior granularita'
-spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=update
 
 # Driver e credenziali per la connessione al DB MySql
 spring.datasource.username=root
-spring.datasource.password=asdrubale
+spring.datasource.password=Password01!
 
 # Formattazione e colorazione dei log
 spring.output.ansi.enabled=ALWAYS
