--- a/userManager/src/main/resources/application.properties
+++ b/userManager/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/myamazon
 
 # Driver e credenziali per la connessione al DB MySql
 spring.datasource.username=root
-spring.datasource.password=asdrubale
+spring.datasource.password=Password01!
 
 
 #Porta univoca per questo microservizio:
