[FIX]Update Product and VendorProduct entities

--- a/productManager/src/main/resources/application.properties
+++ b/productManager/src/main/resources/application.properties
@@ -19,8 +19,8 @@ eureka.client.service-url.defaultZone=${EUREKA_CLIENT_URL}
 # Abilita le azioni ddl
 spring.jpa.generate-ddl = true
 
-# Abilita azioni ddl controllate da Hibernate - maggior granularita'
-spring.jpa.hibernate.ddl-auto=update
+# # Abilita azioni ddl controllate da Hibernate - maggior granularita'
+# spring.jpa.hibernate.ddl-auto=update
 
 # Driver e credenziali per la connessione al DB MySql
 spring.datasource.username=root
