--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -1,26 +1,35 @@
 server:
   port: 8081
-  
+
 spring:
   application:
     name: gateway-service
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          "[/**]":
+            allowedOrigins: "http://localhost:4200"
+            allowedHeaders: "*"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
       routes:
         - id: usermanager-service
-          uri: 'http://user-manager-container:8082'
+          uri: "http://user-manager-container:8082"
           predicates:
             - Path=/userManager/**
         - id: productmanager-service
-          uri: 'http://product-manager-container:8083'
+          uri: "http://product-manager-container:8083"
           predicates:
             - Path=/productManager/**
         - id: cartmanager-service
-          uri: 'http://cart-manager-container:8084'
+          uri: "http://cart-manager-container:8084"
           predicates:
             - Path=/cartManager/**
         - id: historymanager-service
-          uri: 'http://history-manager-container:8085'
+          uri: "http://history-manager-container:8085"
           predicates:
             - Path=/historyManager/**
-            
